--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <section>
       <div class="V-card-container">
         <div class="profile-image">
-          <img src="assets/images/profile-image.jpg" alt="Logo de MDN" />
+          <img src="assets/images/profile-image.jpg" alt="Image Profile Card" />
         </div>
         <h2>Sacha Duboix</h2>
         <p>
