--- a/index.html
+++ b/index.html
@@ -11,12 +11,11 @@
     <section>
       <div class="V-card-container">
         <div class="profile-image">
-          <img src="assets/images/profile-image.jpg" alt="Image Profile Card" />
+          <img src="assets/images/chibi.jpg" alt="Image Profile Card" />
         </div>
         <h2>Sacha Duboix</h2>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. In,
-          reiciendis!
         </p>
         <div class="button-container">
           <button>
