--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="button-container">
           <button>
             <a href="https://www.linkedin.com/"
-              >LinkedIn
+              alt=""LinkedIn target="_blank">LinkedIn
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 x="0px"
@@ -41,7 +41,7 @@
             </a>
           </button>
           <button>
-            <a href="https://github.com/">
+            <a href="https://github.com/" alt="Github" target="_blank">
               Github
               <svg
                 xmlns="http://www.w3.org/2000/svg"
